# Chess-Game

./: .gitignore  CMakeLists.txt  ChessGame.sln  ChessGame.vcxproj  ChessGame.vcxproj.filters  ChessWithIUP.sln  ChessWithIUP.vcxproj  ChessWithIUP.vcxproj.filters  README.md  run-cmake-debug.sh  run-cmake.sh
ChessTests/: ChessTests.cpp  ChessTests.vcxproj  ChessTests.vcxproj.filters
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
include/: app.h  board.h  board_renderer.h  canvas.h  color.h  coordinate.h  countable.h  game_app.h  game_renderer.h  gl_headers.h  gl_utils.h  hash_utl.h  image_loader.h  index_buffer.h  log.h  main_window.h  numeric_utils.h  piece.h  player.h  renderer.h  shader.h  sp_string.h  square_data.h  texture.h  texture_data.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
lib/: glfw3.lib  im.lib
res/shaders/: boardFragment.glsl  boardVertex.glsl  piecesFragment.glsl  piecesVertex.glsl
src/: app.cpp  board.cpp  board_renderer.cpp  canvas.cpp  color.cpp  coordinate.cpp  game_app.cpp  game_renderer.cpp  gl_utils.cpp  image_loader.cpp  index_buffer.cpp  main.cpp  main_window.cpp  numeric_utils.cpp  piece.cpp  renderer.cpp  shader.cpp  sp_string.cpp  square_data.cpp  texture.cpp  texture_data.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
